bookmarks behind menu, "< Zurück" correct color, prompt sticky-bottom

--- a/ppServer/base/static/base/css/header.scss
+++ b/ppServer/base/static/base/css/header.scss
@@ -77,7 +77,7 @@ header {
 		background-color: lighten(#97b0c9, 20%);
 		min-width: fit-content;
 		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-		z-index: 10;
+		z-index: 100;
 		border-radius: 5px;
 	}
 	.dropdown-content a {
