--- a/ppServer/base/static/base/css/main.scss
+++ b/ppServer/base/static/base/css/main.scss
@@ -102,7 +102,7 @@ a.btn {
 	padding: .25em .5em .25em 1em;
 	clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 100%, 20% 49%);
 	opacity: 0.75;
-	z-index: 1000;
+	z-index: 90;
 }
 .chat {
 	top: 150px;
